--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Description: This package contains utility functions specific to the needs of
              EPA R Users.
 Depends: R (>= 3.5.0)
 Imports:
-    stringr
+    stringr,
+    fs
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
