--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,10 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Suggests: 
-    testthat,
+    testthat (>= 3.0.0),
     knitr,
     rmarkdown,
     formatR,
     progress
 VignetteBuilder: knitr
+Config/testthat/edition: 3
