added function to test a package and create a test coverage badge.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Depends: R (>= 3.5.0)
 Imports:
     stringr,
     fs,
-    here
+    here,
+    covr,
+    badger
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
