--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -19,9 +19,7 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/setup-r@v2
-
-      - uses: r-lib/actions/setup-renv@v2
+      - uses: r-lib/actions/setup-r@v2s
 
       - name: Render Rmarkdown files and Commit Results
         run: |
