--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -18,12 +18,9 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
       
-      - uses: r-lib/actions/setup-r-dependencies@v1
-        with:
-          extra-packages: 
-            - covr
-            - badger
-            - devtools
+      - name: Install R packages
+        run: |
+          Rscript -e "devtools::install_github('usepa/epar', dependencies = TRUE)"
 
       - name: Render Rmarkdown files and Commit Results
         run: |
