--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -20,6 +20,7 @@ jobs:
       
       - name: Install R packages
         run: |
+          Rscript -e "install.packages(c('devtools')"
           Rscript -e "devtools::install_github('usepa/epar', dependencies = TRUE)"
 
       - name: Render Rmarkdown files and Commit Results
