--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -12,7 +12,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -20,7 +20,7 @@ jobs:
       
       - name: Install R packages
         run: |
-          Rscript -e "install.packages(c('devtools')"
+          Rscript -e "install.packages(c('devtools'))"
           Rscript -e "devtools::install_github('usepa/epar', dependencies = TRUE)"
 
       - name: Render Rmarkdown files and Commit Results
