--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -18,7 +18,7 @@ jobs:
       
       - name: Install R packages
         run: |
-          Rscript -e "install.packages(c('remotes'))"
+          Rscript -e "install.packages(c('remotes', 'covr', 'badger', 'usethis'))"
           Rscript -e "remotes::install_github('usepa/epar', dependencies = TRUE)"
 
       - name: Render README files
